# push_swap

./: .gitignore  CMakeLists.txt  Makefile
checker/: Makefile  main.c
checker/includes/: checker.h  colors.h
checker/srcs/: error_handler.c  get_stack.c
includes/: checker.h  push_swap.h  stack.h
srcs/checker/: error_handler.c  get_number.c  get_stack.c  main.c
srcs/libft/: Makefile  ft_is_equal.c  ft_perror.c  ft_read.s  ft_realloc.c  ft_setsplit.c  ft_strcmp.c  ft_strcmp.s  ft_strdup.c  ft_strdup.s  ft_strlen.c  ft_strlen.s  ft_write.s  libft.h
srcs/push_swap/: 3_elems.c  push_swap.c
srcs/stack/: pa_pb.c  print_stack.c  ra_rb_rr.c  rra_rrb_rrr.c  sa_sb_ss.c  stack.c  stack_utils.c
stack/includes/: stack.h
stack/srcs/: clear.c  print_stack.c
